# lazyuv

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: check-pr-title.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-07-21-lazyuv-v1.md
docs/superpowers/specs/: 2026-07-21-lazyuv-design.md  2026-07-22-environments-python-design.md  2026-07-22-global-tools-cache-design.md  2026-07-22-lock-fork-accuracy-design.md  2026-07-23-publishing-pipeline-design.md  2026-07-23-tree-outdated-run-args-design.md  2026-07-23-uv-init-design.md  2026-07-23-uv-version-design.md  2026-07-23-workspaces-advanced-deps-design.md  2026-07-24-inline-scripts-design.md
src/lazyuv/: __init__.py  __main__.py  app.py  commands.py  data.py  models.py  parsing.py  styles.tcss
src/lazyuv/screens/: add_dependency.py  add_script_dependency.py  confirm.py  export.py  filter.py  help.py  init.py  python.py  run_args.py  script_picker.py  sync_options.py  tool_install.py  tree.py  version.py  workspace.py
src/lazyuv/widgets/: cache.py  dependencies.py  details.py  environment.py  output.py  scripts.py  tools.py  workspace.py
tests/: test_app.py  test_commands.py  test_data.py  test_parsing.py  test_real_uv.py
tests/fixtures/project/: pyproject.toml
