[project]
name = "lazyuv"
version = "0.1.0"
description = "A terminal UI for uv project workflows"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8,<9",
]

[project.scripts]
lazyuv = "lazyuv.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazyuv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
