[project]
name = "lazyuv"
description = "A keyboard-driven terminal UI for uv project workflows"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
    { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
keywords = [
    "cli",
    "command-line",
    "dependency-management",
    "developer-tools",
    "packaging",
    "terminal",
    "textual",
    "tui",
    "uv",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "textual>=8,<9",
]

[project.urls]
changelog = "https://github.com/hasansezertasan/lazyuv/blob/main/CHANGELOG.md"
documentation = "https://github.com/hasansezertasan/lazyuv#readme"
homepage = "https://github.com/hasansezertasan/lazyuv"
issues = "https://github.com/hasansezertasan/lazyuv/issues"
releasenotes = "https://github.com/hasansezertasan/lazyuv/releases"
source = "https://github.com/hasansezertasan/lazyuv.git"

[project.scripts]
lazyuv = "lazyuv.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazyuv"]

# hatch-vcs derives the version from the git tag (release-please owns the bump).
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/lazyuv/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
